implemented handshake between peers with local ip